--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,6 @@
         height: 100vh;
     }
 
-    @media only screen and (max-width:600px) {
-        .banner {
-            height: 72vh;
-        }
-    }
     .image{
         width: 100%;
         height: 100%;
@@ -24,4 +19,13 @@
     .box{
         min-width: 10vw;
         height: 35vh;
+    }
+    @media only screen and (max-width:600px) {
+        .banner {
+            height: 72vh;
+        }
+        .box{
+            min-width: 55vw;
+            height: 35vh;
+        }
     }
